fix: Animation now works in every modern browser
It have worked only in Firefox before, because I messed up vendor prefixes

--- a/style.css
+++ b/style.css
@@ -17,13 +17,12 @@ body {
 }
 
 .heart-front {
-  transition: -moz-transform linear 300ms;
+  transition: transform linear 300ms;
   cursor: pointer;
 }
 
 .open {
   transform: rotate3d(-3, -2, 0, 180deg) translate3d(25%, -35%, 0);
-  -moz-transform: rotate3d(-3, -2, 0, 180deg) translate3d(25%, -35%, 0);
   pointer-events: none;
 }
 
